tests/MathML/basic/bad/badCondContent1.mml
<math xmlns="http://www.w3.org/1998/Math/MathML"><mtable><mtr><mtd><apply><int></int><bvar></bvar><condition></condition><apply></apply></apply></mtd></mtr><mtr><mtd><apply><int></int><bvar></bvar><condition><apply></apply></condition><apply></apply></apply></mtd></mtr><mtr><mtd><apply><int></int><bvar><degree><ci>2</ci></degree></bvar><condition><apply></apply></condition><apply></apply></apply></mtd></mtr><mtr><mtd><apply><int></int><bvar><degree><ci>2</ci></degree></bvar><condition></condition><apply></apply></apply></mtd></mtr><mtr><mtd><apply><int></int><bvar><degree><ci>2</ci></degree></bvar><condition><reln></reln></condition><apply></apply></apply></mtd></mtr><mtr><mtd><apply><int></int><bvar><ci>2</ci></bvar><condition><apply><ci>x</ci></apply></condition><apply></apply></apply></mtd></mtr><mtr><mtd><apply><diff></diff><bvar><degree><ci>2</ci></degree></bvar><condition><apply><gt></gt><cn>2</cn><cn>5</cn></apply></condition><apply></apply></apply></mtd></mtr><mtr><mtd><apply><divide></divide><cn>2</cn><ci>x</ci><ci>y</ci></apply></mtd></mtr><mtr><mtd><apply><exp></exp><cn>2</cn><ci>x</ci><ci>y</ci></apply></mtd></mtr><mtr><mtd><apply><limit></limit><bvar><degree><ci>2</ci></degree></bvar><condition><apply><gt></gt><cn>2</cn><cn>5</cn></apply></condition><apply></apply></apply></mtd></mtr><mtr><mtd><apply><log></log><bvar><degree><ci>2</ci></degree></bvar><condition><apply><gt></gt><cn>2</cn><cn>5</cn></apply></condition><apply></apply></apply></mtd></mtr><mtr><mtd><apply><moment></moment><bvar><degree><ci>2</ci></degree></bvar><condition><apply><gt></gt><cn>2</cn><cn>5</cn></apply></condition><apply></apply></apply></mtd></mtr><mtr><mtd><apply><quotient></quotient><bvar><degree><ci>2</ci></degree></bvar><condition><apply><gt></gt><cn>2</cn><cn>5</cn></apply></condition><apply></apply></apply></mtd></mtr><mtr><mtd><apply><times></times><ci>2</ci><ci>5</ci></apply><apply><times></times><ci>2</ci><apply><ci>5</ci></apply></apply></mtd></mtr></mtable></math>